Fix: embedded entities spacing

--- a/web/themes/custom/fds_faxe_theme/src/styles/stylesheet.scss
+++ b/web/themes/custom/fds_faxe_theme/src/styles/stylesheet.scss
@@ -6,6 +6,9 @@
 @import "overrides/loader";
 @import "theme/loader";
 
+.embedded-entity {
+  line-height: 0 !important;
+}
 
 .embedded-entity.align-left {
   padding-right: 10px;
